Upgrade to Java 25 (#89)